eg05_sb3_oauth2_resource_server_jwt_symmetric_key